# AegisAi

./: .env.example  .firebaserc  .gitignore  PITCH_SCRIPT.md  README.md  build_linux.sh  build_mac.sh  build_windows.bat  build_windows.ps1  index.html  package-lock.json  package.json  patch_deembeder.py  pyproject.toml  requirements.txt  server.py  setup.py  tailwind.config.ts  walkthrough.md.resolved  windows_build_guide.md.resolved
.firebase/: hosting.ZGlzdA.cache
aegis_local/: server.py
aegis_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aegis_local/gemma/: __init__.py  deembeder.py  reconstructor.py
server/: index.js
src/: App.tsx  index.css
src/aegis_local.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  PrivacyDebugPanel.tsx  Sidebar.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
src/gemma/: deembeder.py  reconstructor.py
src/hooks/: useAuth.ts  useChat.ts
src/lib/: claude.ts  firebase.ts  gemini.ts  mockResponses.ts  privacyPipeline.ts
src/pages/: Index.tsx  Landing.tsx  Login.tsx
src/types/: chat.ts
